fix modal overflow and layover

--- a/_sass/objects/_o.modal.scss
+++ b/_sass/objects/_o.modal.scss
@@ -24,11 +24,11 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 80%;
+  max-height: 98%;
+  overflow: scroll;
   width: 1000px;
-  max-width: 95%;
   border-radius: 6px;
-	padding: 48px;
+	padding: 32px;
 	background: get-color(cream);
 	box-shadow: 1px 1px 8px rgba(get-color(black), 0.10);
 }
